fix themes on mobile

--- a/themes/wwktm/static/css/style.css
+++ b/themes/wwktm/static/css/style.css
@@ -52,7 +52,10 @@ section.content .container{ padding:inherit 100px; }
   section.content .container{ padding:inherit; }
 }
 @media only screen and (max-width: 850px) {
-  .hero-content{width:100%;}
+  .hero{ overflow:hidden; }
+  h1.title{ font-size:2.5rem;}
+  .hero-content{width:100%; margin-top:20px;}
   #main-logo{ opacity:0.2; transform: scale(4); right:60px; }
   .what{ width:100%; }
+  .newsletter-section input[type="email"]{width:50%;}
 }
